# dead_code_analyzer

./: CMakeLists.txt  README.md  cpp.hint
input_data/drmemtrace.ls.1139582.4300.dir/raw/: drmemtrace.ls.1139582.8571.raw
src/: analysis_tool.h  analyzer.cpp  analyzer.h  analyzer_runner.cpp  analyzer_runner.h  dead_code_analysis.cpp  dead_code_analysis.h  directory_iterator.cpp  directory_iterator.h  file_reader.cpp  file_reader.h  main.cpp  memref.h  memtrace_stream.h  reader.cpp  reader.h  record_file_reader.cpp  record_file_reader.h  trace_entry.cpp  trace_entry.h  utils.h
src/trace/cpps/: analyzer.cpp  analyzer_runner.cpp  dead_code_analysis.cpp  directory_iterator.cpp  file_reader.cpp  main.cpp  reader.cpp  trace_entry.cpp
src/trace/headers/: analysis_tool.h  analyzer.h  analyzer_runner.h  dead_code_analysis.h  directory_iterator.h  file_reader.h  memref.h  reader.h  record_file_reader.cpp  record_file_reader.h  trace_entry.h  utils.h
src/xed/include/: xed-address-width-enum.h  xed-agen.h  xed-attribute-enum.h  xed-attributes.h  xed-build-defines.h  xed-category-enum.h  xed-chip-enum.h  xed-common-defs.h  xed-common-hdrs.h  xed-convert-table-init.h  xed-cpuid-bit-enum.h  xed-cpuid-rec.h  xed-decode.h  xed-decoded-inst.h  xed-disas.h  xed-encode-check.h  xed-encode-direct.h  xed-encode.h  xed-encoder-gen-defs.h  xed-encoder-hl.h  xed-encoder-iforms.h  xed-error-enum.h  xed-exception-enum.h  xed-extension-enum.h  xed-flag-action-enum.h  xed-flag-enum.h  xed-flags.h  xed-format-options.h  xed-gen-table-defs.h  xed-get-time.h  xed-iclass-enum.h  xed-iform-enum.h  xed-iform-map.h  xed-iformfl-enum.h  xed-ild-enum.h  xed-ild.h  xed-immdis.h  xed-immed.h  xed-init-pointer-names.h  xed-init.h  (+33 more)
